Add new Configvar for path of website root

--- a/HPKS/hvs.ini
+++ b/HPKS/hvs.ini
@@ -13,6 +13,7 @@ USE_RUETTLER=1
 USE_WINDOW=0
 USE_WEBSERVER=1
 SERVER_PORT=5100
+WWW_PATH="/home/pi/test/pufferkontrollsystem/www/"
 
 [ruettler]
 // Spannung ab wann Rüttler aktiv ist
